@@ -22,32 +22,63 @@ import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.PropertyAccessor;
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.fasterxml.jackson.core.JsonParser;
+import com.fasterxml.jackson.core.JsonToken;
+import com.fasterxml.jackson.core.Version;
+import com.fasterxml.jackson.databind.AnnotationIntrospector;
 import com.fasterxml.jackson.databind.BeanDescription;
+import com.fasterxml.jackson.databind.BeanProperty;
 import com.fasterxml.jackson.databind.DeserializationConfig;
 import com.fasterxml.jackson.databind.DeserializationContext;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.JavaType;
 import com.fasterxml.jackson.databind.JsonDeserializer;
+import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.JsonSerializer;
+import com.fasterxml.jackson.databind.Module;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.databind.SerializerProvider;
-import com.fasterxml.jackson.databind.deser.BeanDeserializerModifier;
+import com.fasterxml.jackson.databind.deser.ContextualDeserializer;
+import com.fasterxml.jackson.databind.deser.Deserializers;
+import com.fasterxml.jackson.databind.deser.ValueInstantiator;
+import com.fasterxml.jackson.databind.deser.ValueInstantiators;
+import com.fasterxml.jackson.databind.deser.std.StdDeserializer;
+import com.fasterxml.jackson.databind.jsontype.TypeDeserializer;
+import com.fasterxml.jackson.databind.jsontype.TypeSerializer;
 import com.fasterxml.jackson.databind.module.SimpleModule;
 import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import com.fasterxml.jackson.datatype.jdk8.Jdk8Module;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import com.fasterxml.jackson.datatype.jsr310.deser.DurationDeserializer;
 import com.google.common.base.Defaults;
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
+import com.google.gson.JsonElement;
+import com.google.gson.annotations.SerializedName;
 import com.uber.cadence.client.ApplicationFailureException;
 import java.io.IOException;
 import java.io.PrintWriter;
 import java.io.StringWriter;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
 import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
+import java.util.AbstractSet;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashSet;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.OptionalDouble;
+import java.util.OptionalInt;
+import java.util.OptionalLong;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -61,9 +92,10 @@ import org.slf4j.LoggerFactory;
  * <p>Advantages over {@link JsonDataConverter} (Gson-based):
  *
  * <ul>
- *   <li>Native support for Java 8 date/time types (LocalDate, LocalDateTime, Instant, etc.)
- *   <li>Better polymorphism support via Jackson's {@code @JsonTypeInfo} annotations
- *   <li>Generally better performance for larger payloads
+ *   <li>Native support for Java 8 date/time types (LocalDate, LocalDateTime, Instant, etc.), also
+ *       on JDK 16 and later, where Gson cannot access the fields of these types
+ *   <li>Polymorphism through Jackson's {@code @JsonTypeInfo} annotations
+ *   <li>Faster serialization of larger payloads
  * </ul>
  *
  * <p>Usage:
@@ -76,12 +108,87 @@ import org.slf4j.LoggerFactory;
  *         .setDataConverter(JacksonDataConverter.getInstance())
  *         .build());
  * }</pre>
+ *
+ * <p>Behavior to be aware of:
+ *
+ * <ul>
+ *   <li>A class that Jackson cannot instantiate, because it has no no-arg constructor, {@code
+ *       JsonCreator} or {@code ConstructorProperties} (for example an immutable class with only an
+ *       all-args constructor, a Lombok {@code @Value} class or a non-static inner class), is
+ *       instantiated without running its constructors and field initializers, and its fields are
+ *       set from the JSON; the enclosing instance of a non-static inner class is null. This is what
+ *       {@link JsonDataConverter} does too. JDK classes and their subclasses, abstract types and
+ *       throwables are excluded.
+ *   <li>Exceptions are restored as their exact class with their exact message, stack trace, cause,
+ *       suppressed exceptions and fields. Like {@link JsonDataConverter}, the no-arg constructor of
+ *       the exception class is used when it has one. Otherwise, as with Java serialization, no
+ *       constructor of the exception class runs. A JDK exception whose fields are not accessible to
+ *       this code (JDK 16 and later without --add-opens for its package) is created with its
+ *       (String) constructor, or else as an ApplicationFailureException, with its message.
+ *   <li>An empty or whitespace-only payload is decoded as null (the first argument null and the
+ *       remaining ones their default value), like {@link JsonDataConverter}.
+ *   <li>An abstract {@link Set} is decoded as an insertion-ordered {@link LinkedHashSet}.
+ *   <li>{@link Optional} values are written as the contained value, or null when empty.
+ *   <li>Numbers in untyped values (Object, the values of a {@code Map<String, Object>}, the
+ *       elements of a {@code List<Object>}) are decoded as Integer, Long, BigInteger or Double,
+ *       where {@link JsonDataConverter} always gives Double. Register {@link
+ *       #gsonCompatibleNumbersModule()} for Double.
+ *   <li>Jackson annotations on the classes of payloads apply, for example {@code @JsonIgnore},
+ *       {@code @JsonProperty} or {@code @JsonTypeInfo}. The first time one of them makes the JSON
+ *       of a class differ from the JSON of {@link JsonDataConverter}, that is logged at INFO.
+ * </ul>
+ *
+ * <p>Gson annotations and types: like {@link JsonDataConverter}, it applies Gson's {@code
+ * SerializedName} (the name and alternate names of fields, including fields of exceptions, and of
+ * enum constants), and it writes and reads Gson's JsonElement, JsonObject, JsonArray and
+ * JsonPrimitive as the JSON they represent. A non-empty name of a Jackson {@code JsonProperty}
+ * takes precedence over the name of {@code SerializedName}, which is then still read. Gson's {@code
+ * JsonAdapter} is not supported. A property of a payload that the class of the value has no field
+ * for is skipped, and logged at WARN once per class and property; {@code @JsonIgnoreProperties} on
+ * the class silences it. Unknown properties of exceptions are skipped without a message, as in
+ * {@link JsonDataConverter}. These messages use the logger {@code
+ * com.uber.cadence.converter.JacksonDataConverter.GsonCompatibility}.
+ *
+ * <p>Migrating from {@link JsonDataConverter}:
+ *
+ * <ul>
+ *   <li>Configure the same converter on all clients and workers of a domain.
+ *   <li>Workflows that are open when a deployment switches converters are replayed with the new
+ *       converter. Switch only for new domains or task lists, after the open workflows complete, or
+ *       for new code paths behind {@code Workflow.getVersion}, unless you verified the replay of
+ *       your open histories with this converter.
+ *   <li>This converter reads what {@link JsonDataConverter} writes for java.time values (the form
+ *       Gson writes on JDK 15 and earlier), java.util.Date, java.sql.Date, java.sql.Time and
+ *       java.sql.Timestamp strings, Calendar, Duration, Optional (except when its content is a map,
+ *       an interface, an untyped value or a class with a "value" property: such an Optional is read
+ *       in the form this converter writes, so Gson's {@code {"value":x}} is then read as a map or
+ *       fails), OptionalInt, OptionalLong, OptionalDouble and byte arrays. It does not read what
+ *       Gson could not read either, such as ZonedDateTime. A deserializer of your own that you
+ *       register for one of these types replaces this. Registering Jackson's own JavaTimeModule or
+ *       Jdk8Module does not.
+ *   <li>Code that casts untyped numbers to Double needs {@link #gsonCompatibleNumbersModule()}.
+ *   <li>{@link JsonDataConverter} reads the data that the client records for itself with this
+ *       converter, such as the headers of markers and the retry options of {@code Workflow.retry},
+ *       on JDK 15 and earlier or with {@code --add-opens java.base/java.time}. It does not read
+ *       this converter's java.time values, Optionals, byte arrays and Durations of your payloads,
+ *       nor of the fields of exceptions (for example the backoff of an ActivityFailureException,
+ *       the details of an ActivityTimeoutException and the workflow type of a
+ *       WorkflowFailureException), so switching back to {@link JsonDataConverter} is not supported
+ *       for open workflows whose payloads contain them.
+ *   <li>Memos and search attributes are always written and read with {@link JsonDataConverter}.
+ *   <li>Changing the configuration of the ObjectMapper, for example the naming of properties, on a
+ *       deployment with open workflows is like switching converters.
+ * </ul>
+ *
+ * <p>Default typing ({@code ObjectMapper.activateDefaultTyping}) is supported, also for the types
+ * that this converter handles itself, such as exceptions, Gson's JsonElement and DataConverter
+ * fields, and for several values, such as the arguments of a workflow method. Enabling it on a
+ * domain with open workflows makes the untyped JSON they recorded unreadable for non-final types.
  */
 public final class JacksonDataConverter implements DataConverter {
 
   private static final Logger log = LoggerFactory.getLogger(JacksonDataConverter.class);
 
-  private static final DataConverter INSTANCE = new JacksonDataConverter();
   private static final Object[] EMPTY_OBJECT_ARRAY = new Object[0];
   private static final String TYPE_FIELD_NAME = "type";
   private static final String JSON_CONVERTER_TYPE = "JSON";
@@ -102,6 +209,45 @@ public final class JacksonDataConverter implements DataConverter {
           "com.uber.cadence.internal.worker.POJOActivityImplementationFactory$POJOActivityImplementation.execute",
           "com.uber.cadence.internal.sync.POJODecisionTaskHandler$POJOWorkflowImplementation.execute");
 
+  /** Keys of the JSON of an exception that fields of exception classes cannot use. */
+  private static final ImmutableSet<String> RESERVED_THROWABLE_KEYS =
+      ImmutableSet.of("detailMessage", "stackTrace", "cause", "suppressedExceptions", "class");
+
+  /**
+   * Whether an exception class can be restored as itself, which needs all the fields of its JSON to
+   * be settable. That is not the case for JDK exceptions with fields in a package that is not open
+   * to this code (JDK 16 and later without --add-opens for the package).
+   */
+  private static final ClassValue<Boolean> RESTORABLE =
+      new ClassValue<Boolean>() {
+        @Override
+        protected Boolean computeValue(Class<?> type) {
+          for (Class<?> c = type; c != Throwable.class; c = c.getSuperclass()) {
+            for (Field field : c.getDeclaredFields()) {
+              if (isThrowableJsonField(field)) {
+                try {
+                  field.setAccessible(true);
+                } catch (RuntimeException e) {
+                  return false;
+                }
+              }
+            }
+          }
+          return true;
+        }
+      };
+
+  /**
+   * Writes and reads the data that the client records for itself (see {@link ClientPayloads}), so
+   * that no customization of the ObjectMapper can change or break it. Never exposed.
+   */
+  private static final ObjectMapper CLIENT_PAYLOAD_MAPPER = newDefaultObjectMapper(false);
+
+  /** Holds the singleton, so that it is created after all static fields of this class. */
+  private static final class InstanceHolder {
+    static final DataConverter INSTANCE = new JacksonDataConverter();
+  }
+
   private final ObjectMapper objectMapper;
 
   /**
@@ -109,7 +255,7 @@ public final class JacksonDataConverter implements DataConverter {
    * ObjectMapper}.
    */
   public static DataConverter getInstance() {
-    return INSTANCE;
+    return InstanceHolder.INSTANCE;
   }
 
   private JacksonDataConverter() {
@@ -117,22 +263,105 @@ public final class JacksonDataConverter implements DataConverter {
   }
 
   /**
-   * Constructs an instance giving an ability to override {@link ObjectMapper} initialization.
+   * Constructs an instance with a customized {@link ObjectMapper}.
    *
-   * @param mapperInterceptor function that intercepts {@link ObjectMapper} construction. The
-   *     interceptor receives an already-configured ObjectMapper and must return the mapper to use
-   *     (may be the same instance, mutated in-place, or a new one).
+   * <p>{@code mapperInterceptor} receives a new ObjectMapper that already has the configuration
+   * this converter needs: its handling of exceptions, java.time and Optional values, Sets, Gson's
+   * annotations and types, and classes without a usable constructor. The interceptor configures
+   * that mapper, for example by registering modules or changing features, and returns it, or a
+   * {@link ObjectMapper#copy() copy} of it. Modules it registers take precedence over the
+   * configuration of this converter. It must not return another ObjectMapper, such as one shared by
+   * the application: apply the settings of that mapper to the given one instead, for example by
+   * registering the same modules. To keep the support of Gson's {@code SerializedName} when setting
+   * an annotation introspector, add yours as the secondary one, which then applies where the
+   * existing ones find nothing: {@code
+   * mapper.setAnnotationIntrospector(AnnotationIntrospectorPair.pair(mapper.getSerializationConfig().getAnnotationIntrospector(),
+   * yours))}.
+   *
+   * <p>The converter keeps its own copy of the returned mapper. Changes made to the mapper after
+   * this constructor returns have no effect on the converter.
+   *
+   * <p>The customization applies to the values of workflows, activities, signals and queries and to
+   * the fields of exceptions. It does not apply to the data the client records for itself, such as
+   * the headers of version and local activity markers and the retry options of {@code
+   * Workflow.retry}, which are always written and read with the default configuration. The
+   * Durations of these retry options are always written as {@code {"seconds":..,"nanos":..}}, also
+   * inside other values.
+   *
+   * <p>For example, to decode untyped numbers as Double like {@link JsonDataConverter}: {@code new
+   * JacksonDataConverter(mapper -> mapper.registerModule(gsonCompatibleNumbersModule()))}.
+   *
+   * @param mapperInterceptor configures the given ObjectMapper and returns it, or a copy of it
+   * @throws IllegalArgumentException if {@code mapperInterceptor} returns null or another
+   *     ObjectMapper
    */
   public JacksonDataConverter(Function<ObjectMapper, ObjectMapper> mapperInterceptor) {
-    ObjectMapper mapper = newDefaultObjectMapper();
-    this.objectMapper = mapperInterceptor.apply(mapper);
+    ObjectMapper configured = mapperInterceptor.apply(newDefaultObjectMapper(true));
+    if (configured == null || !configured.getRegisteredModuleIds().contains(CadenceModule.ID)) {
+      throw new IllegalArgumentException(
+          "mapperInterceptor must return the ObjectMapper it was given, or a copy() of it, after"
+              + " configuring it. The returned ObjectMapper lacks the configuration of"
+              + " JacksonDataConverter for exceptions, java.time and Optional values, Sets and"
+              + " classes without a usable constructor. To use the settings of another"
+              + " ObjectMapper, apply them to the given one, for example by registering the same"
+              + " modules.");
+    }
+    // Changes made later through a reference kept by the interceptor do not affect this converter.
+    this.objectMapper = configured.copy();
+    if (!hasGsonAnnotationIntrospector(objectMapper)) {
+      log.warn(
+          "The ObjectMapper of this JacksonDataConverter no longer has the annotation introspector"
+              + " that applies Gson's @SerializedName, so fields and enum constants renamed with it"
+              + " are written and read under their Java names. To keep it, add your introspector"
+              + " as the secondary one: AnnotationIntrospectorPair.pair(existing, yours).");
+    }
   }
 
-  private static ObjectMapper newDefaultObjectMapper() {
+  private static boolean hasGsonAnnotationIntrospector(ObjectMapper mapper) {
+    for (AnnotationIntrospector introspector :
+        mapper.getDeserializationConfig().getAnnotationIntrospector().allIntrospectors()) {
+      if (introspector instanceof GsonAnnotationIntrospector) {
+        return true;
+      }
+    }
+    return false;
+  }
+
+  /**
+   * Returns a module that decodes the numbers of untyped values (Object, the values of a {@code
+   * Map<String, Object>}, the elements of a {@code List<Object>}) as Double, like {@link
+   * JsonDataConverter}, for code written for it. Register it through {@link
+   * #JacksonDataConverter(Function)}.
+   */
+  public static Module gsonCompatibleNumbersModule() {
+    return GsonCompatibility.untypedNumbersModule();
+  }
+
+  /** The mapper for a single value of the type: client payloads have their own. */
+  private ObjectMapper mapperFor(Type type) {
+    if (type == null) {
+      return objectMapper;
+    }
+    Class<?> raw =
+        type instanceof Class
+            ? (Class<?>) type
+            : objectMapper.getTypeFactory().constructType(type).getRawClass();
+    return ClientPayloads.isClientPayload(raw) ? CLIENT_PAYLOAD_MAPPER : objectMapper;
+  }
+
+  /**
+   * @param withDiagnostics whether to log differences from JsonDataConverter, which is not done for
+   *     the data the client records for itself
+   */
+  private static ObjectMapper newDefaultObjectMapper(boolean withDiagnostics) {
     ObjectMapper mapper = new ObjectMapper();
 
-    // Register Java 8 date/time module
-    mapper.registerModule(new JavaTimeModule());
+    // Java 8 date/time types, and Optional, OptionalInt, OptionalLong and OptionalDouble. They are
+    // registered under ids of their own, as Jackson ignores a module registered under an id it has
+    // already seen: a JavaTimeModule or Jdk8Module registered by the mapper interceptor then still
+    // applies.
+    mapper.registerModule(new ModuleWithId(JavaTimeModule.class.getName(), new JavaTimeModule()));
+    mapper.registerModule(new ModuleWithId(Jdk8Module.class.getName(), new Jdk8Module()));
 
     // Match Gson's behavior: serialize null fields
     mapper.setSerializationInclusion(JsonInclude.Include.ALWAYS);
@@ -155,17 +384,8 @@ public final class JacksonDataConverter implements DataConverter {
     mapper.setVisibility(PropertyAccessor.IS_GETTER, JsonAutoDetect.Visibility.NONE);
     mapper.setVisibility(PropertyAccessor.SETTER, JsonAutoDetect.Visibility.NONE);
 
-    // Register custom module for Throwable, DataConverter, and Class handling
-    SimpleModule cadenceModule = new SimpleModule("CadenceModule");
-    cadenceModule.addSerializer(DataConverter.class, new DataConverterSerializer());
-    cadenceModule.addDeserializer(DataConverter.class, new DataConverterDeserializer());
-    cadenceModule.addSerializer(Class.class, new ClassSerializer());
-    cadenceModule.addDeserializer(Class.class, new ClassDeserializer());
-    // Serialize every Throwable (top-level, nested, suppressed) with the compact
-    // {"class":..,"stackTrace":"..","cause":{..}} format, matching Gson's behavior.
-    cadenceModule.addSerializer(Throwable.class, new ThrowableSerializer(mapper));
-    cadenceModule.setDeserializerModifier(new ThrowableDeserializerModifier());
-    mapper.registerModule(cadenceModule);
+    // Registered after JavaTimeModule, so that its Duration deserializer takes precedence.
+    mapper.registerModule(new CadenceModule(mapper, withDiagnostics));
 
     return mapper;
   }
@@ -184,11 +404,21 @@ public final class JacksonDataConverter implements DataConverter {
       if (values.length == 1) {
         // The registered ThrowableSerializer handles Throwables automatically,
         // so no special-casing needed here.
-        String json = objectMapper.writeValueAsString(values[0]);
+        Object value = values[0];
+        String json = mapperFor(value == null ? null : value.getClass()).writeValueAsString(value);
         return json.getBytes(StandardCharsets.UTF_8);
       }
-      String json = objectMapper.writeValueAsString(values);
-      return json.getBytes(StandardCharsets.UTF_8);
+      // Each value is written on its own like a single value, so that with default typing the
+      // array itself gets no type id: fromDataArray reads its elements by position.
+      StringWriter json = new StringWriter();
+      try (JsonGenerator generator = objectMapper.getFactory().createGenerator(json)) {
+        generator.writeStartArray();
+        for (Object value : values) {
+          objectMapper.writeValue(generator, value);
+        }
+        generator.writeEndArray();
+      }
+      return json.toString().getBytes(StandardCharsets.UTF_8);
     } catch (DataConverterException e) {
       throw e;
     } catch (Throwable e) {
@@ -199,17 +429,14 @@ public final class JacksonDataConverter implements DataConverter {
   @Override
   public <T> T fromData(byte[] content, Class<T> valueClass, Type valueType)
       throws DataConverterException {
-    if (content == null) {
+    // An empty payload, for example the result of a void workflow, is null as in JsonDataConverter.
+    if (content == null || isBlank(content)) {
       return null;
     }
     try {
-      JavaType javaType = objectMapper.getTypeFactory().constructType(valueType);
-      if (Throwable.class.isAssignableFrom(valueClass)) {
-        return deserializeThrowable(content, javaType);
-      }
-      return objectMapper.readValue(new String(content, StandardCharsets.UTF_8), javaType);
-    } catch (DataConverterException e) {
-      throw e;
+      ObjectMapper mapper = mapperFor(valueType);
+      JavaType javaType = mapper.getTypeFactory().constructType(valueType);
+      return mapper.readValue(new String(content, StandardCharsets.UTF_8), javaType);
     } catch (Exception e) {
       throw new DataConverterException(content, new Type[] {valueType}, e);
     }
@@ -225,14 +452,19 @@ public final class JacksonDataConverter implements DataConverter {
         throw new DataConverterException(
             "Content doesn't match expected arguments", content, valueTypes);
       }
-      if (valueTypes.length == 1) {
-        JavaType javaType = objectMapper.getTypeFactory().constructType(valueTypes[0]);
-        Object result;
-        if (Throwable.class.isAssignableFrom(javaType.getRawClass())) {
-          result = deserializeThrowable(content, javaType);
-        } else {
-          result = objectMapper.readValue(new String(content, StandardCharsets.UTF_8), javaType);
+      if (isBlank(content)) {
+        // Like JsonDataConverter, which reads an empty payload as a single JSON null: the first
+        // argument is null and the remaining ones get their default values.
+        Object[] result = new Object[valueTypes.length];
+        for (int i = 1; i < valueTypes.length; i++) {
+          result[i] = defaultValueOf(valueTypes[i]);
         }
+        return result;
+      }
+      if (valueTypes.length == 1) {
+        ObjectMapper mapper = mapperFor(valueTypes[0]);
+        JavaType javaType = mapper.getTypeFactory().constructType(valueTypes[0]);
+        Object result = mapper.readValue(new String(content, StandardCharsets.UTF_8), javaType);
         return new Object[] {result};
       }
 
@@ -248,21 +480,10 @@ public final class JacksonDataConverter implements DataConverter {
       Object[] result = new Object[valueTypes.length];
       for (int i = 0; i < valueTypes.length; i++) {
         if (i >= array.size()) { // Missing arguments => add defaults
-          Type t = valueTypes[i];
-          if (t instanceof Class) {
-            result[i] = Defaults.defaultValue((Class<?>) t);
-          } else {
-            result[i] = null;
-          }
+          result[i] = defaultValueOf(valueTypes[i]);
         } else {
           JavaType javaType = objectMapper.getTypeFactory().constructType(valueTypes[i]);
-          if (Throwable.class.isAssignableFrom(javaType.getRawClass())) {
-            byte[] elementBytes =
-                objectMapper.writeValueAsString(array.get(i)).getBytes(StandardCharsets.UTF_8);
-            result[i] = deserializeThrowable(elementBytes, javaType);
-          } else {
-            result[i] = objectMapper.treeToValue(array.get(i), javaType);
-          }
+          result[i] = objectMapper.treeToValue(array.get(i), javaType);
         }
       }
       return result;
@@ -271,6 +492,20 @@ public final class JacksonDataConverter implements DataConverter {
     } catch (Exception e) {
       throw new DataConverterException(content, valueTypes, e);
     }
+  }
+
+  /** True for a payload made only of JSON whitespace, including an empty one. */
+  private static boolean isBlank(byte[] content) {
+    for (byte b : content) {
+      if (b != ' ' && b != '\t' && b != '\n' && b != '\r') {
+        return false;
+      }
+    }
+    return true;
+  }
+
+  private static Object defaultValueOf(Type type) {
+    return type instanceof Class ? Defaults.defaultValue((Class<?>) type) : null;
   }
 
   // ---------- Throwable serialization (matches Gson CustomThrowableTypeAdapter behavior)
@@ -350,28 +585,31 @@ public final class JacksonDataConverter implements DataConverter {
    */
   private static ObjectNode buildThrowableFieldsNode(Throwable throwable, ObjectMapper mapper) {
     ObjectNode node = mapper.createObjectNode();
-    // Always include the message
-    node.put("detailMessage", throwable.getMessage());
+    // Always include the message. Set below, once it is known whether all fields were written.
+    node.putNull("detailMessage");
 
-    // Serialize subclass-specific fields via reflection
+    // Serialize subclass-specific fields via reflection. A field hidden by a field of the same
+    // name in a subclass is skipped.
+    Set<String> names = new HashSet<>();
+    boolean allFieldsWritten = true;
     Class<?> clazz = throwable.getClass();
     while (clazz != null && clazz != Throwable.class && clazz != Object.class) {
       for (Field field : clazz.getDeclaredFields()) {
-        if (java.lang.reflect.Modifier.isStatic(field.getModifiers())
-            || java.lang.reflect.Modifier.isTransient(field.getModifiers())
-            || field.isSynthetic()) {
+        if (!isThrowableJsonField(field) || !names.add(field.getName())) {
           continue;
         }
         try {
           field.setAccessible(true);
           Object value = field.get(throwable);
-          node.set(field.getName(), mapper.valueToTree(value));
+          node.set(jsonNameOf(field), mapper.valueToTree(value));
         } catch (Exception e) {
+          allFieldsWritten = false;
           log.warn("Failed to serialize field: " + field.getName(), e);
         }
       }
       clazz = clazz.getSuperclass();
     }
+    node.put("detailMessage", messageOf(throwable, allFieldsWritten, !names.isEmpty()));
 
     // Suppressed exceptions
     Throwable[] suppressed = throwable.getSuppressed();
@@ -388,146 +626,297 @@ public final class JacksonDataConverter implements DataConverter {
     return node;
   }
 
-  @SuppressWarnings("unchecked")
-  private <T> T deserializeThrowable(byte[] content, JavaType javaType) throws IOException {
-    JsonNode rootNode = objectMapper.readTree(new String(content, StandardCharsets.UTF_8));
-    if (!rootNode.isObject()) {
-      throw new DataConverterException(
-          content, new Type[] {javaType}, new IOException("Expected JSON object for Throwable"));
-    }
-    return (T) throwableFromJsonNode((ObjectNode) rootNode, objectMapper);
+  /** Whether the field is written to, and read from, the JSON of an exception. */
+  private static boolean isThrowableJsonField(Field field) {
+    int modifiers = field.getModifiers();
+    return !Modifier.isStatic(modifiers)
+        && !Modifier.isTransient(modifiers)
+        && !field.isSynthetic()
+        && !RESERVED_THROWABLE_KEYS.contains(jsonNameOf(field));
   }
 
-  static Throwable throwableFromJsonNode(ObjectNode object, ObjectMapper mapper)
-      throws IOException {
-    JsonNode classElement = object.get("class");
-    if (classElement == null) {
-      throw new IOException("Missing 'class' field in Throwable JSON");
-    }
+  /**
+   * The key of a field in the JSON of an exception. Like in JsonDataConverter, whose
+   * CustomThrowableTypeAdapter writes the fields with Gson, it is the name given by Gson's {@code
+   * SerializedName}.
+   */
+  private static String jsonNameOf(Field field) {
+    SerializedName name = field.getAnnotation(SerializedName.class);
+    return name == null ? field.getName() : name.value();
+  }
 
-    String className = classElement.asText();
+  /** The JSON of a field of an exception, under its name or one of its alternate names. */
+  private static JsonNode fieldNode(ObjectNode object, Field field) {
+    JsonNode node = object.get(jsonNameOf(field));
+    SerializedName name = field.getAnnotation(SerializedName.class);
+    if (node == null && name != null) {
+      for (String alternate : name.alternate()) {
+        node = object.get(alternate);
+        if (node != null) {
+          break;
+        }
+      }
+    }
+    return node;
+  }
+
+  /**
+   * Returns the message to write. When all fields of the exception are written, that is the message
+   * it was created with, as {@link Throwable#getMessage()} can be overridden to decorate it or to
+   * compute it from these fields, and the exception is restored as its exact class with them.
+   * Otherwise it is getMessage(), which is also the case for a null message and no fields, as the
+   * message can be computed (like the helpful message of a NullPointerException) or come from
+   * fields that could not be written, for example of a JDK exception whose package is not open to
+   * this code.
+   */
+  private static String messageOf(
+      Throwable throwable, boolean allFieldsWritten, boolean hasFields) {
+    Field field = ThrowableFields.DETAIL_MESSAGE;
+    if (allFieldsWritten && field != null) {
+      try {
+        String message = (String) field.get(throwable);
+        if (message != null || hasFields) {
+          return message;
+        }
+      } catch (IllegalAccessException | RuntimeException e) {
+        // Use getMessage() below.
+      }
+    }
+    return throwable.getMessage();
+  }
+
+  /**
+   * Fields of Throwable, resolved on first use so that nothing is accessed reflectively unless
+   * needed. Null when {@code java.lang} is not open to this code.
+   */
+  private static final class ThrowableFields {
+    static final Field DETAIL_MESSAGE = accessibleField("detailMessage");
+    static final Field CAUSE = accessibleField("cause");
+
+    private static Field accessibleField(String name) {
+      try {
+        Field field = Throwable.class.getDeclaredField(name);
+        field.setAccessible(true);
+        return field;
+      } catch (NoSuchFieldException | RuntimeException e) {
+        return null;
+      }
+    }
+  }
+
+  // ---------- Throwable deserialization ----------
+
+  /**
+   * Restores a Throwable from its compact form as an instance of the exact class named in "class"
+   * (see {@link #newThrowable}). Fields declared by the exception classes are then set from the
+   * JSON, and the stack trace, cause and suppressed exceptions through the public Throwable API.
+   */
+  private static Throwable throwableFromJsonNode(ObjectNode object, DeserializationContext ctxt)
+      throws IOException {
+    JsonNode classNode = object.get("class");
+    if (classNode == null || classNode.isNull()) {
+      throw JsonMappingException.from(ctxt, "Missing 'class' field in Throwable JSON");
+    }
+    String className = classNode.asText();
     Class<?> classType;
     try {
-      classType = Class.forName(className);
-    } catch (ClassNotFoundException e) {
+      classType = Class.forName(className, false, JacksonDataConverter.class.getClassLoader());
+    } catch (ClassNotFoundException | LinkageError e) {
       classType = ApplicationFailureException.class;
     }
     if (!Throwable.class.isAssignableFrom(classType)) {
-      throw new IOException("Expected type that extends Throwable: " + className);
+      throw JsonMappingException.from(ctxt, "Expected type that extends Throwable: " + className);
     }
 
-    StackTraceElement[] stackTrace = parseStackTrace(object);
-
-    // Remove special fields before default deserialization
-    object.remove("class");
-    object.put("stackTrace", ""); // Clear so it doesn't interfere
-
-    // Deserialize the cause separately if present
-    JsonNode causeNode = object.remove("cause");
-
-    Throwable result;
-    try {
-      result = (Throwable) mapper.treeToValue(object, classType);
-    } catch (Exception e) {
-      // Fallback: construct manually
-      result = constructThrowable(classType, object);
+    JsonNode messageNode = object.get("detailMessage");
+    String message = messageNode == null || messageNode.isNull() ? null : messageNode.asText();
+    Throwable result = newThrowable(classType, message);
+    if (RESTORABLE.get(result.getClass())) {
+      restoreFields(result, object, ctxt);
     }
+    result.setStackTrace(parseStackTrace(object));
 
-    // Restore subclass-specific fields via reflection.
-    // Jackson's default deserialization may not populate final fields,
-    // so we do it manually from the JSON node.
-    restoreSubclassFields(result, object, mapper);
-
-    result.setStackTrace(stackTrace);
-
-    // Restore cause
+    JsonNode causeNode = object.get("cause");
     if (causeNode != null && causeNode.isObject()) {
-      try {
-        Throwable causeThrowable = throwableFromJsonNode((ObjectNode) causeNode, mapper);
-        Field causeField = Throwable.class.getDeclaredField("cause");
-        causeField.setAccessible(true);
-        causeField.set(result, causeThrowable);
-      } catch (Exception e) {
-        log.warn("Failed to restore cause in deserialized throwable.", e);
+      setCause(result, throwableFromJsonNode((ObjectNode) causeNode, ctxt));
+    } else if (result.getCause() != null) {
+      // Set by the constructor of the exception, while the original exception has no cause.
+      setCauseField(result, result);
+    }
+    JsonNode suppressedNode = object.get("suppressedExceptions");
+    if (suppressedNode != null && suppressedNode.isArray()) {
+      for (JsonNode suppressed : suppressedNode) {
+        if (suppressed.isObject()) {
+          result.addSuppressed(throwableFromJsonNode((ObjectNode) suppressed, ctxt));
+        }
       }
     }
-
     return result;
   }
 
-  private static Throwable constructThrowable(Class<?> classType, ObjectNode object) {
-    String message = null;
-    JsonNode msgNode = object.get("detailMessage");
-    if (msgNode != null) {
-      message = msgNode.asText();
+  /**
+   * Creates an instance of the exact exception class with the given message. As in
+   * JsonDataConverter, the no-arg constructor of the class is used when it has one, so that its
+   * field initializers run, and the message is then set directly. Otherwise the instance is created
+   * without running any constructor of the class, as with Java serialization, so that exceptions
+   * without a (String) or no-arg constructor keep their type.
+   *
+   * <p>A class whose fields cannot all be set (see {@link #RESTORABLE}) would lack its state that
+   * way, so it is created with its (String) constructor, as is any class on a runtime without the
+   * module jdk.unsupported. When that fails too, an ApplicationFailureException is returned.
+   */
+  private static Throwable newThrowable(Class<?> type, String message) {
+    if (RESTORABLE.get(type)) {
+      Throwable result = newThrowableWithNoArgConstructor(type, message);
+      if (result != null) {
+        return result;
+      }
+      Constructor<?> constructor = ConstructorBypass.constructorFor(type);
+      if (constructor != null) {
+        try {
+          return (Throwable) constructor.newInstance(message);
+        } catch (ReflectiveOperationException | RuntimeException | LinkageError e) {
+          log.debug("Failed to instantiate {} without its constructors", type.getName(), e);
+        }
+      }
     }
-
     try {
-      Constructor<?> constructor = classType.getConstructor(String.class);
-      return (Throwable) constructor.newInstance(message);
-    } catch (Exception e1) {
-      try {
-        Constructor<?> constructor = classType.getConstructor();
-        return (Throwable) constructor.newInstance();
-      } catch (Exception e2) {
-        return new RuntimeException(message);
+      Constructor<?> stringConstructor = type.getDeclaredConstructor(String.class);
+      stringConstructor.setAccessible(true);
+      return (Throwable) stringConstructor.newInstance(message);
+    } catch (ReflectiveOperationException | RuntimeException | LinkageError e) {
+      log.warn("Cannot instantiate {}, using ApplicationFailureException", type.getName(), e);
+      return new ApplicationFailureException(message);
+    }
+  }
+
+  private static Throwable newThrowableWithNoArgConstructor(Class<?> type, String message) {
+    Field detailMessage = ThrowableFields.DETAIL_MESSAGE;
+    if (detailMessage == null) {
+      // The message could not be set.
+      return null;
+    }
+    Constructor<?> constructor;
+    try {
+      constructor = type.getDeclaredConstructor();
+    } catch (NoSuchMethodException e) {
+      return null;
+    }
+    try {
+      constructor.setAccessible(true);
+      Throwable result = (Throwable) constructor.newInstance();
+      detailMessage.set(result, message);
+      return result;
+    } catch (ReflectiveOperationException | RuntimeException | LinkageError e) {
+      log.debug("Failed to instantiate {} with its no-arg constructor", type.getName(), e);
+      return null;
+    }
+  }
+
+  private static void setCause(Throwable throwable, Throwable cause) {
+    try {
+      throwable.initCause(cause);
+    } catch (RuntimeException e) {
+      // The constructor of the exception set a cause already. Replace it, as JsonDataConverter
+      // does, or at least keep the cause visible.
+      if (!setCauseField(throwable, cause)) {
+        throwable.addSuppressed(cause);
+      }
+    }
+  }
+
+  /** Sets Throwable.cause directly. The throwable itself as cause means that it has none. */
+  private static boolean setCauseField(Throwable throwable, Throwable cause) {
+    Field field = ThrowableFields.CAUSE;
+    if (field == null) {
+      return false;
+    }
+    try {
+      field.set(throwable, cause);
+      return true;
+    } catch (IllegalAccessException | RuntimeException e) {
+      return false;
+    }
+  }
+
+  /** Sets the fields declared by the classes between the throwable's class and Throwable. */
+  private static void restoreFields(
+      Throwable result, ObjectNode object, DeserializationContext ctxt) {
+    Set<String> names = new HashSet<>();
+    for (Class<?> clazz = result.getClass();
+        clazz != Throwable.class;
+        clazz = clazz.getSuperclass()) {
+      for (Field field : clazz.getDeclaredFields()) {
+        // As when writing, a field hidden by a field of the same name in a subclass is skipped.
+        if (!isThrowableJsonField(field) || !names.add(field.getName())) {
+          continue;
+        }
+        try {
+          field.setAccessible(true);
+          field.set(result, readField(field, fieldNode(object, field), field.get(result), ctxt));
+        } catch (IllegalAccessException | RuntimeException e) {
+          // For example a field of a JDK exception whose package is not open to this code.
+          log.debug("Failed to restore field {} of {}", field.getName(), clazz.getName(), e);
+        }
       }
     }
   }
 
   /**
-   * Restores subclass-specific fields on a Throwable instance from the JSON object node. This
-   * handles cases where Jackson cannot populate final fields through normal deserialization.
+   * Returns the value to set to the field. A field that is missing in the JSON or cannot be read
+   * keeps the value it got when the exception was created. An Optional field is never left null:
+   * callers such as WorkflowException.getWorkflowType() use it.
    */
-  private static void restoreSubclassFields(
-      Throwable result, ObjectNode object, ObjectMapper mapper) {
-    Class<?> clazz = result.getClass();
-    while (clazz != null && clazz != Throwable.class && clazz != Object.class) {
-      for (Field field : clazz.getDeclaredFields()) {
-        if (java.lang.reflect.Modifier.isStatic(field.getModifiers())
-            || java.lang.reflect.Modifier.isTransient(field.getModifiers())
-            || field.isSynthetic()) {
-          continue;
-        }
-        JsonNode valueNode = object.get(field.getName());
-        if (valueNode != null && !valueNode.isNull()) {
-          try {
-            field.setAccessible(true);
-            JavaType fieldType = mapper.getTypeFactory().constructType(field.getGenericType());
-            Object value = mapper.treeToValue(valueNode, fieldType);
-            field.set(result, value);
-          } catch (Exception e) {
-            log.debug("Failed to restore field: " + field.getName(), e);
-          }
-        }
+  private static Object readField(
+      Field field, JsonNode valueNode, Object currentValue, DeserializationContext ctxt) {
+    Object value = currentValue;
+    if (valueNode != null && valueNode.isNull()) {
+      value = field.getType().isPrimitive() ? currentValue : null;
+    } else if (valueNode != null) {
+      try {
+        JavaType type = ctxt.getTypeFactory().constructType(field.getGenericType());
+        value = ctxt.readTreeAsValue(valueNode, type);
+      } catch (IOException | RuntimeException e) {
+        log.warn(
+            "Failed to restore field {} of {}: {}",
+            field.getName(),
+            field.getDeclaringClass().getName(),
+            e.toString());
       }
-      clazz = clazz.getSuperclass();
     }
+    return value == null ? emptyValueOf(field.getType()) : value;
+  }
+
+  private static Object emptyValueOf(Class<?> type) {
+    if (type == Optional.class) {
+      return Optional.empty();
+    } else if (type == OptionalInt.class) {
+      return OptionalInt.empty();
+    } else if (type == OptionalLong.class) {
+      return OptionalLong.empty();
+    } else if (type == OptionalDouble.class) {
+      return OptionalDouble.empty();
+    }
+    return null;
   }
 
   private static StackTraceElement[] parseStackTrace(ObjectNode object) {
     JsonNode jsonStackTrace = object.get("stackTrace");
-    if (jsonStackTrace == null) {
+    if (jsonStackTrace == null || !jsonStackTrace.isTextual()) {
       return new StackTraceElement[0];
     }
     String stackTrace = jsonStackTrace.asText();
-    if (stackTrace == null || stackTrace.isEmpty()) {
-      return new StackTraceElement[0];
-    }
-    try {
-      @SuppressWarnings("StringSplitter")
-      String[] lines = stackTrace.split("\r\n|\n");
-      StackTraceElement[] result = new StackTraceElement[lines.length];
-      for (int i = 0; i < lines.length; i++) {
-        result[i] = parseStackTraceElement(lines[i]);
+    List<StackTraceElement> result = new ArrayList<>();
+    @SuppressWarnings("StringSplitter")
+    String[] lines = stackTrace.split("\r\n|\n");
+    for (String line : lines) {
+      StackTraceElement element = parseStackTraceElement(line);
+      // setStackTrace rejects null elements, so lines that are not stack frames are skipped.
+      if (element != null) {
+        result.add(element);
       }
-      return result;
-    } catch (Exception e) {
-      if (log.isWarnEnabled()) {
-        log.warn("Failed to parse stack trace: " + stackTrace);
-      }
-      return new StackTraceElement[0];
     }
+    return result.toArray(new StackTraceElement[0]);
   }
 
   private static StackTraceElement parseStackTraceElement(String line) {
@@ -552,6 +941,97 @@ public final class JacksonDataConverter implements DataConverter {
 
   // ---------- Custom Jackson serializers/deserializers ----------
 
+  /**
+   * Cadence specific (de)serialization. It is registered before the mapper interceptor runs, so
+   * modules registered by the interceptor take precedence.
+   */
+  private static final class CadenceModule extends SimpleModule {
+
+    /** A unique id: Jackson ignores a module registered under an id it has already seen. */
+    static final String ID = "com.uber.cadence.converter.JacksonDataConverter.CadenceModule";
+
+    private final boolean withDiagnostics;
+
+    CadenceModule(ObjectMapper mapper, boolean withDiagnostics) {
+      super(ID);
+      this.withDiagnostics = withDiagnostics;
+      addSerializer(DataConverter.class, new DataConverterSerializer());
+      addDeserializer(DataConverter.class, new DataConverterDeserializer());
+      addSerializer(Class.class, new ClassSerializer());
+      addDeserializer(Class.class, new ClassDeserializer());
+      // Serialize every Throwable (top-level, nested, suppressed) with the compact
+      // {"class":..,"stackTrace":"..","cause":{..}} format, matching Gson's behavior.
+      addSerializer(Throwable.class, new ThrowableSerializer(mapper));
+      addDeserializer(Duration.class, new LenientDurationDeserializer());
+      // HashSet iteration order depends on hash codes, which for enums and other classes without
+      // a hashCode override differ between processes. Workflow code iterating a Set would then
+      // behave differently on replay. JsonDataConverter uses LinkedHashSet as well.
+      addAbstractTypeMapping(Set.class, LinkedHashSet.class);
+      addAbstractTypeMapping(AbstractSet.class, LinkedHashSet.class);
+      // Gson's tree types are written as the JSON they represent.
+      addSerializer(JsonElement.class, new GsonJsonElementSerialization.Serializer());
+    }
+
+    /** The same id whichever way the Jackson version in use derives the id of a SimpleModule. */
+    @Override
+    public Object getTypeId() {
+      return ID;
+    }
+
+    @Override
+    public void setupModule(SetupContext context) {
+      super.setupModule(context);
+      context.addValueInstantiators(new ConstructorlessValueInstantiators());
+      context.addDeserializers(new ThrowableDeserializers());
+      context.addDeserializers(new GsonJsonElementSerialization.Deserializers());
+      // Inserted as the primary introspector: Jackson 2.16 and later replace the enum aliases found
+      // by an introspector that runs before their own.
+      context.insertAnnotationIntrospector(new GsonAnnotationIntrospector());
+      // Reads what JsonDataConverter wrote, and writes the Durations of the client's own data so
+      // that JsonDataConverter can read them.
+      context.addBeanDeserializerModifier(new GsonCompatibility.ReadModifier());
+      context.addBeanDeserializerModifier(new GsonCompatibility.InternalPayloadReadModifier());
+      context.addBeanSerializerModifier(new GsonCompatibility.InternalPayloadWriteModifier());
+      if (withDiagnostics) {
+        context.addDeserializationProblemHandler(
+            new GsonCompatibilityDiagnostics.UnknownProperties());
+        context.addBeanSerializerModifier(new GsonCompatibilityDiagnostics.Writing());
+        context.addBeanDeserializerModifier(new GsonCompatibilityDiagnostics.Reading());
+      }
+    }
+  }
+
+  /** Registers a module under another id. */
+  private static final class ModuleWithId extends Module {
+    private final String id;
+    private final Module module;
+
+    ModuleWithId(String module, Module delegate) {
+      this.id = "com.uber.cadence.converter.JacksonDataConverter." + module;
+      this.module = delegate;
+    }
+
+    @Override
+    public String getModuleName() {
+      return module.getModuleName();
+    }
+
+    @Override
+    public Version version() {
+      return module.version();
+    }
+
+    @Override
+    public Object getTypeId() {
+      return id;
+    }
+
+    @Override
+    public void setupModule(SetupContext context) {
+      module.setupModule(context);
+    }
+  }
+
   /** Serializes DataConverter fields to a simple {"type":"JSON"} object. */
   private static class DataConverterSerializer extends JsonSerializer<DataConverter> {
     @Override
@@ -560,6 +1040,17 @@ public final class JacksonDataConverter implements DataConverter {
       gen.writeStartObject();
       gen.writeStringField(TYPE_FIELD_NAME, JSON_CONVERTER_TYPE);
       gen.writeEndObject();
+    }
+
+    /** Written without a type id, also with default typing. */
+    @Override
+    public void serializeWithType(
+        DataConverter value,
+        JsonGenerator gen,
+        SerializerProvider serializers,
+        TypeSerializer typeSer)
+        throws IOException {
+      serialize(value, gen, serializers);
     }
   }
 
@@ -578,6 +1069,14 @@ public final class JacksonDataConverter implements DataConverter {
             "Cannot deserialize DataConverter. Expected type is JSON. Found " + value);
       }
       return JacksonDataConverter.getInstance();
+    }
+
+    /** Read without a type id, also with default typing. */
+    @Override
+    public Object deserializeWithType(
+        JsonParser p, DeserializationContext ctxt, TypeDeserializer typeDeserializer)
+        throws IOException {
+      return deserialize(p, ctxt);
     }
   }
 
@@ -633,108 +1132,206 @@ public final class JacksonDataConverter implements DataConverter {
       JsonNode node = throwableToJsonNode(value, active);
       gen.writeTree(node);
     }
-  }
 
-  /**
-   * Modifier that intercepts Throwable deserialization. Keeps the default (bean) deserializer as a
-   * delegate so that subclass fields are preserved, falling back to constructor-based construction
-   * only when the delegate cannot handle the type.
-   */
-  private static class ThrowableDeserializerModifier extends BeanDeserializerModifier {
+    /** The "class" field identifies the exception class, also with default typing. */
     @Override
-    public JsonDeserializer<?> modifyDeserializer(
-        DeserializationConfig config, BeanDescription beanDesc, JsonDeserializer<?> deserializer) {
-      if (Throwable.class.isAssignableFrom(beanDesc.getBeanClass())) {
-        return new ThrowableDeserializer(beanDesc.getBeanClass(), deserializer);
-      }
-      return deserializer;
+    public void serializeWithType(
+        Throwable value, JsonGenerator gen, SerializerProvider provider, TypeSerializer typeSer)
+        throws IOException {
+      serialize(value, gen, provider);
     }
   }
 
   /**
-   * Custom deserializer for Throwable types. Delegates to the default bean deserializer first so
-   * that the concrete type and all declared fields are restored — matching the Gson path which uses
-   * a reflective bean adapter. Falls back to constructor-based construction only when the delegate
-   * cannot handle the type (e.g. package-private constructors).
+   * Routes every Throwable type to {@link ThrowableDeserializer}, so that Jackson never builds a
+   * bean deserializer for it, which would need reflective access to java.lang.Throwable.
    */
-  private static class ThrowableDeserializer extends JsonDeserializer<Throwable>
-      implements com.fasterxml.jackson.databind.deser.ResolvableDeserializer {
-    private final Class<?> targetClass;
-    private final JsonDeserializer<?> delegate;
-
-    ThrowableDeserializer(Class<?> targetClass, JsonDeserializer<?> delegate) {
-      this.targetClass = targetClass;
-      this.delegate = delegate;
-    }
+  private static final class ThrowableDeserializers extends Deserializers.Base {
+    private static final ThrowableDeserializer DESERIALIZER = new ThrowableDeserializer();
 
     @Override
-    public void resolve(DeserializationContext ctxt)
-        throws com.fasterxml.jackson.databind.JsonMappingException {
-      if (delegate instanceof com.fasterxml.jackson.databind.deser.ResolvableDeserializer) {
-        ((com.fasterxml.jackson.databind.deser.ResolvableDeserializer) delegate).resolve(ctxt);
-      }
+    public JsonDeserializer<?> findBeanDeserializer(
+        JavaType type, DeserializationConfig config, BeanDescription beanDesc) {
+      return Throwable.class.isAssignableFrom(type.getRawClass()) ? DESERIALIZER : null;
+    }
+  }
+
+  /** Deserializes the compact format written by {@link ThrowableSerializer}. */
+  private static final class ThrowableDeserializer extends StdDeserializer<Throwable> {
+
+    ThrowableDeserializer() {
+      super(Throwable.class);
     }
 
     @Override
     public Throwable deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
-      JsonNode node = p.getCodec().readTree(p);
-
-      if (node.isObject() && node.has("class")) {
-        // Compact Cadence format: reuse the shared path so type, stack trace and cause survive.
-        ObjectMapper active = (ObjectMapper) p.getCodec();
-        return throwableFromJsonNode((ObjectNode) node, active);
+      JsonNode node = ctxt.readTree(p);
+      if (!node.isObject()) {
+        return ctxt.reportInputMismatch(
+            Throwable.class, "Expected JSON object for Throwable, found %s", node.getNodeType());
       }
+      return throwableFromJsonNode((ObjectNode) node, ctxt);
+    }
 
-      String message = null;
-      if (node.has("detailMessage")) {
-        message = node.get("detailMessage").asText();
+    /** The "class" field identifies the exception class, also with default typing. */
+    @Override
+    public Object deserializeWithType(
+        JsonParser p, DeserializationContext ctxt, TypeDeserializer typeDeserializer)
+        throws IOException {
+      return deserialize(p, ctxt);
+    }
+
+    @Override
+    public boolean isCachable() {
+      return true;
+    }
+  }
+
+  /**
+   * Reads a Duration in the formats of Jackson and also in the {"seconds":..,"nanos":..} format of
+   * JsonDataConverter, which is found in histories recorded with it, for example in local activity
+   * markers and in the RetryOptions of Workflow.retry.
+   */
+  static final class LenientDurationDeserializer extends StdDeserializer<Duration>
+      implements ContextualDeserializer {
+
+    private final JsonDeserializer<?> delegate;
+
+    LenientDurationDeserializer() {
+      this(DurationDeserializer.INSTANCE);
+    }
+
+    private LenientDurationDeserializer(JsonDeserializer<?> delegate) {
+      super(Duration.class);
+      this.delegate = delegate;
+    }
+
+    @Override
+    public JsonDeserializer<?> createContextual(DeserializationContext ctxt, BeanProperty property)
+        throws JsonMappingException {
+      return new LenientDurationDeserializer(
+          DurationDeserializer.INSTANCE.createContextual(ctxt, property));
+    }
+
+    @Override
+    public Duration deserialize(JsonParser p, DeserializationContext ctxt) throws IOException {
+      if (!p.hasToken(JsonToken.START_OBJECT)) {
+        return (Duration) delegate.deserialize(p, ctxt);
       }
+      JsonNode node = ctxt.readTree(p);
+      JsonNode seconds = node.path("seconds");
+      JsonNode nanos = node.path("nanos");
+      if (!isLong(seconds) || !(nanos.isMissingNode() || isLong(nanos))) {
+        return ctxt.reportInputMismatch(
+            Duration.class, "Expected {\"seconds\":..,\"nanos\":..} for Duration, found %s", node);
+      }
+      return Duration.ofSeconds(seconds.longValue(), nanos.longValue());
+    }
 
-      Throwable result = null;
+    private static boolean isLong(JsonNode node) {
+      return node.isIntegralNumber() && node.canConvertToLong();
+    }
+  }
 
-      // Try delegate first to preserve subclass type and fields
-      if (delegate != null) {
-        try {
-          JsonParser nodeParser = node.traverse(p.getCodec());
-          nodeParser.nextToken();
-          result = (Throwable) delegate.deserialize(nodeParser, ctxt);
-        } catch (Exception e) {
-          // Delegate failed — fall through to constructor-based construction
-          log.debug("Delegate deserialization failed for {}, falling back.", targetClass, e);
+  /**
+   * Lets Jackson deserialize classes that have no creator it can use (no no-arg constructor, {@code
+   * JsonCreator} or {@code ConstructorProperties}), such as immutable classes with only an all-args
+   * constructor, Lombok {@code @Value} classes and non-static inner classes. Such classes are
+   * instantiated without running their constructors, as JsonDataConverter does, and their fields
+   * are then set from the JSON. The client depends on this for its own internal payloads, such as
+   * marker headers and RetryOptions, which are encoded with the configured converter.
+   */
+  private static final class ConstructorlessValueInstantiators extends ValueInstantiators.Base {
+
+    private static final ImmutableList<String> JDK_PACKAGE_PREFIXES =
+        ImmutableList.of("java.", "javax.", "jdk.", "sun.", "com.sun.");
+
+    @Override
+    public ValueInstantiator findValueInstantiator(
+        DeserializationConfig config,
+        BeanDescription beanDesc,
+        ValueInstantiator defaultInstantiator) {
+      Class<?> type = beanDesc.getBeanClass();
+      if (hasCreator(defaultInstantiator) || !isEligible(type)) {
+        return defaultInstantiator;
+      }
+      Constructor<?> constructor = ConstructorBypass.constructorFor(type);
+      if (constructor == null) {
+        return defaultInstantiator;
+      }
+      return new ConstructorlessValueInstantiator(defaultInstantiator, constructor);
+    }
+
+    private static boolean hasCreator(ValueInstantiator instantiator) {
+      return instantiator.canCreateUsingDefault()
+          || instantiator.canCreateFromObjectWith()
+          || instantiator.canCreateUsingDelegate()
+          || instantiator.canCreateUsingArrayDelegate();
+    }
+
+    // Jackson asks for the instantiators of bean types only, so not of arrays, primitive types,
+    // enums, local or anonymous classes, and throwables are handled by ThrowableDeserializers.
+    private static boolean isEligible(Class<?> type) {
+      // Collections and maps keep their elements in fields that their constructors initialize.
+      if (Modifier.isAbstract(type.getModifiers())
+          || Collection.class.isAssignableFrom(type)
+          || Map.class.isAssignableFrom(type)) {
+        return false;
+      }
+      // JDK classes, their subclasses and records keep Jackson's own handling.
+      for (Class<?> c = type; c != null && c != Object.class; c = c.getSuperclass()) {
+        if (isJdkClass(c)) {
+          return false;
         }
       }
+      return true;
+    }
 
-      // Fall back to constructor-based construction
-      if (result == null) {
-        try {
-          Constructor<?> constructor = targetClass.getDeclaredConstructor(String.class);
-          constructor.setAccessible(true);
-          result = (Throwable) constructor.newInstance(message);
-        } catch (Exception e1) {
-          try {
-            Constructor<?> constructor = targetClass.getDeclaredConstructor();
-            constructor.setAccessible(true);
-            result = (Throwable) constructor.newInstance();
-          } catch (Exception e2) {
-            result = new RuntimeException(message);
-          }
+    private static boolean isJdkClass(Class<?> type) {
+      for (String prefix : JDK_PACKAGE_PREFIXES) {
+        if (type.getName().startsWith(prefix)) {
+          return true;
         }
       }
+      return false;
+    }
+  }
 
-      // Handle suppressed exceptions
-      if (node.has("suppressedExceptions") && node.get("suppressedExceptions").isArray()) {
-        for (JsonNode suppressed : node.get("suppressedExceptions")) {
-          try {
-            if (suppressed.has("detailMessage")) {
-              result.addSuppressed(new RuntimeException(suppressed.get("detailMessage").asText()));
-            }
-          } catch (Exception e) {
-            // ignore
-          }
-        }
+  private static final class ConstructorlessValueInstantiator extends ValueInstantiator.Delegating {
+
+    private final Constructor<?> constructor;
+
+    ConstructorlessValueInstantiator(ValueInstantiator delegate, Constructor<?> constructor) {
+      super(delegate);
+      this.constructor = constructor;
+    }
+
+    @Override
+    public ValueInstantiator createContextual(DeserializationContext ctxt, BeanDescription beanDesc)
+        throws JsonMappingException {
+      ValueInstantiator contextual = delegate().createContextual(ctxt, beanDesc);
+      return contextual == delegate()
+          ? this
+          : new ConstructorlessValueInstantiator(contextual, constructor);
+    }
+
+    @Override
+    public boolean canInstantiate() {
+      return true;
+    }
+
+    @Override
+    public boolean canCreateUsingDefault() {
+      return true;
+    }
+
+    @Override
+    public Object createUsingDefault(DeserializationContext ctxt) throws IOException {
+      try {
+        return constructor.newInstance();
+      } catch (ReflectiveOperationException | RuntimeException | LinkageError e) {
+        return ctxt.handleInstantiationProblem(constructor.getDeclaringClass(), null, e);
       }
-
-      return result;
     }
   }
 }
